--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Le Panier de Saison: Guide Interactif des Produits Bio en France</title>
     
     <!-- PWA Meta Tags -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#4A5C3D">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Panier Saison">
-    <link rel="apple-touch-icon" href="/icon-192x192.png">
-    <meta name="msapplication-TileImage" content="/icon-192x192.png">
+    <link rel="apple-touch-icon" href="./icon-192x192.png">
+    <meta name="msapplication-TileImage" content="./icon-192x192.png">
     <meta name="msapplication-TileColor" content="#4A5C3D">
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -224,18 +224,18 @@
 
     <script>
         const seasonalData = {
-            "Janvier": { fruits: ["Citron", "Clémentine", "Kiwi", "Mandarine", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Endive", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Salsifis", "Topinambour"] },
-            "Février": { fruits: ["Citron", "Clémentine", "Kiwi", "Mandarine", "Orange", "Pamplemousse", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Cresson", "Endive", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Radis", "Salsifis", "Topinambour", "Épinard"] },
-            "Mars": { fruits: ["Citron", "Kiwi", "Orange", "Pamplemousse", "Pomme", "Poire"], vegetables: ["Asperge", "Betterave", "Carotte", "Céleri-rave", "Chou (divers)", "Chou-fleur", "Concombre", "Endive", "Épinard", "Fenouil", "Germe de haricot mungo", "Oignon", "Poireau", "Radis"] },
-            "Avril": { fruits: ["Fraise", "Kiwi", "Orange", "Pamplemousse", "Pomme", "Rhubarbe"], vegetables: ["Artichaut", "Asperge", "Betterave", "Carotte", "Chou-fleur", "Chou-rave", "Concombre", "Endive", "Épinard", "Fève", "Laitue", "Mâche", "Morille", "Navet", "Oignon", "Petit pois", "Radis"] },
-            "Mai": { fruits: ["Cerise", "Fraise", "Pamplemousse", "Rhubarbe", "Pomme"], vegetables: ["Artichaut", "Asperge", "Aubergine", "Betterave", "Blette", "Carotte", "Chou-fleur", "Concombre", "Courgette", "Épinard", "Fenouil", "Laitue", "Navet", "Oignon", "Oseille", "Petit pois", "Pomme de terre", "Radis", "Tomate"] },
-            "Juin": { fruits: ["Abricot", "Cassis", "Cerise", "Figue", "Fraise", "Framboise", "Groseille", "Melon", "Mûre", "Myrtille", "Nectarine", "Pêche", "Prune"], vegetables: ["Ail", "Artichaut", "Asperge", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Concombre", "Courgette", "Épinard", "Fenouil", "Fève", "Germe de haricot mungo", "Haricot vert", "Laitue", "Petit pois", "Poivron", "Pomme de terre", "Radis", "Tomate"] },
-            "Juillet": { fruits: ["Abricot", "Cassis", "Cerise", "Figue", "Fraise", "Framboise", "Groseille", "Melon", "Mûre", "Myrtille", "Nectarine", "Pêche", "Prune"], vegetables: ["Ail", "Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Concombre", "Courgette", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Lentille", "Maïs doux", "Petit pois", "Poivron", "Pomme de terre", "Radis", "Tomate"] },
-            "Août": { fruits: ["Abricot", "Figue", "Framboise", "Groseille", "Melon", "Mirabelle", "Mûre", "Myrtille", "Nectarine", "Pastèque", "Pêche", "Poire", "Pomme", "Prune", "Raisin"], vegetables: ["Ail", "Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Cèpe", "Céleri-branche", "Concombre", "Courgette", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Maïs doux", "Poivron", "Tomate"] },
-            "Septembre": { fruits: ["Figue", "Framboise", "Melon", "Mirabelle", "Mûre", "Myrtille", "Nectarine", "Noisette", "Pêche", "Poire", "Pomme", "Prune", "Raisin"], vegetables: ["Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Champignons", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Concombre", "Courge", "Courgette", "Cresson", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Maïs doux", "Mâche", "Oignon", "Panais", "Poireau", "Poivron", "Potimarron", "Radis", "Tomate"] },
-            "Octobre": { fruits: ["Châtaigne", "Coing", "Figue", "Framboise", "Kaki", "Noisette", "Noix", "Poire", "Pomme", "Prune", "Raisin"], vegetables: ["Betterave", "Blette", "Brocoli", "Carotte", "Céleri-rave", "Céleri-branche", "Champignons", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Chou kale", "Courge", "Courgette", "Cresson", "Échalote", "Endive", "Épinard", "Fenouil", "Mâche", "Navet", "Oignon", "Panais", "Patate douce", "Poireau", "Potimarron", "Potiron", "Radis", "Radis noir", "Topinambour"] },
-            "Novembre": { fruits: ["Châtaigne", "Citron", "Clémentine", "Coing", "Kaki", "Kiwi", "Mandarine", "Noisette", "Noix", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Brocoli", "Carotte", "Céleri-rave", "Champignons", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Chou kale", "Chou pommé", "Courge", "Cresson", "Endive", "Épinard", "Mâche", "Navet", "Oignon", "Panais", "Patate douce", "Poireau", "Potimarron", "Potiron", "Salsifis", "Topinambour"] },
-            "Décembre": { fruits: ["Châtaigne", "Citron", "Clémentine", "Kaki", "Kiwi", "Mandarine", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Champignon de Paris", "Chou (divers)", "Chou de Bruxelles", "Chou-fleur", "Chou kale", "Courge", "Cresson", "Endive", "Épinard", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Potimarron", "Potiron", "Salsifis", "Topinambour"] }
+            "Janvier": { fruits: ["Citron", "Clémentine", "Kiwi", "Mandarine", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Chou de Bruxelles", "Chou-fleur", "Chou", "Endive", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Salsifis", "Topinambour"] },
+            "Février": { fruits: ["Citron", "Clémentine", "Kiwi", "Mandarine", "Orange", "Pamplemousse", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Chou de Bruxelles", "Chou-fleur", "Chou", "Cresson", "Endive", "Épinard", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Radis", "Salsifis", "Topinambour"] },
+            "Mars": { fruits: ["Citron", "Kiwi", "Orange", "Pamplemousse", "Pomme", "Poire"], vegetables: ["Asperge", "Betterave", "Carotte", "Céleri-rave", "Chou-fleur", "Chou", "Concombre", "Endive", "Épinard", "Fenouil", "Oignon", "Poireau", "Radis"] },
+            "Avril": { fruits: ["Fraise", "Kiwi", "Pamplemousse", "Pomme", "Rhubarbe"], vegetables: ["Artichaut", "Asperge", "Betterave", "Carotte", "Chou-fleur", "Chou-rave", "Concombre", "Endive", "Épinard", "Fève", "Laitue", "Morille", "Navet", "Oignon", "Petit pois", "Radis"] },
+            "Mai": { fruits: ["Cerise", "Fraise", "Rhubarbe", "Pomme"], vegetables: ["Artichaut", "Asperge", "Aubergine", "Betterave", "Blette", "Carotte", "Chou-fleur", "Concombre", "Courgette", "Épinard", "Fenouil", "Laitue", "Navet", "Oignon", "Petit pois", "Pomme de terre", "Radis", "Tomate"] },
+            "Juin": { fruits: ["Abricot", "Cassis", "Cerise", "Figue", "Fraise", "Framboise", "Groseille", "Melon", "Mûre", "Myrtille", "Nectarine", "Pêche", "Prune"], vegetables: ["Ail", "Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Chou-fleur", "Concombre", "Courgette", "Épinard", "Fenouil", "Fève", "Haricot vert", "Laitue", "Petit pois", "Poivron", "Pomme de terre", "Radis", "Tomate"] },
+            "Juillet": { fruits: ["Abricot", "Cassis", "Cerise", "Figue", "Fraise", "Framboise", "Groseille", "Melon", "Mûre", "Myrtille", "Nectarine", "Pêche", "Prune"], vegetables: ["Ail", "Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Chou-fleur", "Concombre", "Courgette", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Maïs", "Petit pois", "Poivron", "Pomme de terre", "Radis", "Tomate"] },
+            "Août": { fruits: ["Abricot", "Figue", "Framboise", "Groseille", "Melon", "Mirabelle", "Mûre", "Myrtille", "Nectarine", "Pastèque", "Pêche", "Poire", "Pomme", "Prune", "Raisin"], vegetables: ["Ail", "Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Cèpe", "Céleri-branche", "Chou-fleur", "Concombre", "Courgette", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Maïs", "Poivron", "Tomate"] },
+            "Septembre": { fruits: ["Figue", "Framboise", "Melon", "Mirabelle", "Mûre", "Myrtille", "Noisette", "Pêche", "Poire", "Pomme", "Prune", "Raisin"], vegetables: ["Artichaut", "Aubergine", "Betterave", "Blette", "Brocoli", "Carotte", "Céleri-branche", "Champignon", "Chou de Bruxelles", "Chou-fleur", "Chou", "Concombre", "Courge", "Courgette", "Cresson", "Épinard", "Fenouil", "Haricot vert", "Laitue", "Mâche", "Maïs", "Oignon", "Panais", "Poireau", "Poivron", "Potimarron", "Radis", "Tomate"] },
+            "Octobre": { fruits: ["Châtaigne", "Coing", "Figue", "Kaki", "Noisette", "Noix", "Poire", "Pomme", "Raisin"], vegetables: ["Betterave", "Blette", "Brocoli", "Carotte", "Céleri-rave", "Champignon", "Chou de Bruxelles", "Chou-fleur", "Chou", "Courge", "Cresson", "Endive", "Épinard", "Fenouil", "Mâche", "Navet", "Oignon", "Panais", "Patate douce", "Poireau", "Potimarron", "Radis", "Topinambour"] },
+            "Novembre": { fruits: ["Châtaigne", "Citron", "Clémentine", "Coing", "Kaki", "Kiwi", "Mandarine", "Noisette", "Noix", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Brocoli", "Carotte", "Céleri-rave", "Champignon", "Chou de Bruxelles", "Chou-fleur", "Chou", "Courge", "Cresson", "Endive", "Épinard", "Mâche", "Navet", "Oignon", "Panais", "Patate douce", "Poireau", "Potimarron", "Salsifis", "Topinambour"] },
+            "Décembre": { fruits: ["Châtaigne", "Citron", "Clémentine", "Kaki", "Kiwi", "Mandarine", "Orange", "Poire", "Pomme"], vegetables: ["Betterave", "Carotte", "Céleri-rave", "Champignon", "Chou de Bruxelles", "Chou-fleur", "Chou", "Courge", "Cresson", "Endive", "Épinard", "Mâche", "Navet", "Oignon", "Panais", "Poireau", "Potimarron", "Salsifis", "Topinambour"] }
         };
 
         const months = Object.keys(seasonalData);
@@ -403,7 +403,7 @@
         // Service Worker Registration
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('./sw.js')
                     .then((registration) => {
                         console.log('SW registered: ', registration);
                     })
